admission/ValidatingAdmissionPolicy/policies/no-executable-code/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: configmap-no-executable-code
  annotations:
    security.kubeapt.io/displayName: "No Executable Code"
    security.kubeapt.io/description: "Do not store executable code or scripts in ConfigMaps that applications run."
    security.kubeapt.io/resource: "ConfigMaps"
    security.kubeapt.io/severity: "3"
    security.kubeapt.io/remediation: "Remove executable code/scripts from ConfigMap data; bake into image or volume. Fields: data."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - configmaps
  validations:
  - expression: |
      !has(object.data) || !object.data.exists(
        k,
        v,
        k.lowerAscii().matches(".*\\.(sh|bash|py|lua|js|ts|rb|pl|php|groovy|tmpl)$") ||
        v.matches("(?s).*#!/\\S+") ||
        v.matches("(?i).*\\b(function|import|require|process|exec)\\b.*")
      )
    message: |
      Do not store executable code or scripts in ConfigMaps that applications run.
